updated for production